fix logos spacing

--- a/src/components/PageHome/PageHome.css
+++ b/src/components/PageHome/PageHome.css
@@ -104,8 +104,8 @@ section.home .right .icons {
 .twitter {
   height: 35px;
   width: 35px;
-  margin-right: 15px;
-  margin-left: 15px;
+  margin-right: 18px;
+  margin-left: 18px;
   background-size: cover;
   transition: all 0.5s cubic-bezier(0.27, 1.4, 0.57, 1.7);
 }
